# tauri-plugin-fs-resolver

./: .gitignore  .markdownlint-cli2.cjs  Cargo.toml  README.md  build.rs  package-lock.json  package.json  tsconfig.src.json  tsconfig.test.json  vitest.config.ts
.github/workflows/: ci.yml
android/: build.gradle.kts
android/src/main/java/org/silvermine/plugin/fs_resolver/: FsResolverPlugin.kt
crates/fs-resolver/: Cargo.toml
crates/fs-resolver/src/: android_paths.rs  android_resolve.rs  error.rs  fs_environment.rs  ios_paths.rs  ios_resolve.rs  lib.rs  linux_paths.rs  linux_resolve.rs  mac_paths.rs  mac_resolve.rs  path_mapping.rs  path_resolver.rs  windows_paths.rs  windows_resolve.rs
examples/tauri-app/: .gitignore  Package.appxmanifest  README.md  package-lock.json  package.json  winapp.yaml
examples/tauri-app/scripts/: run-msix.ps1
examples/tauri-app/src/: App.vue
examples/tauri-app/src-tauri/: Cargo.toml  tauri.conf.json  tauri.ios.conf.json
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs  main.rs
guest-js/: index.test.ts  index.ts  path-mapping.test.ts  path-mapping.ts  platform-paths.ts  types.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: get_fs_environment.toml  resolve_android_path.toml  resolve_android_path_collection.toml  resolve_ios_path.toml  resolve_linux_path.toml  resolve_mac_path.toml  resolve_win32_path.toml  resolve_windows_application_data_path.toml  resolve_windows_path.toml
permissions/schemas/: schema.json
src/: android_resolution.rs  commands.rs  lib.rs
