[package]
name = "tauri-plugin-fs-resolver"
version = "0.1.0"
description = "A Tauri plugin for resolving platform-specific file paths"
license = "MIT"
edition = "2024"
rust-version = "1.89.0"
links = "tauri-plugin-fs-resolver"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]

[dependencies]
fs-resolver = { path = "./crates/fs-resolver" }
tauri = { version = "2.9.3" }

[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }

[workspace]
members = ["./crates/fs-resolver"]
