[package]
name = "fs-resolver"
version = "0.1.0"
edition = "2024"
rust-version = "1.94.0"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
thiserror = "2.0.17"

[target.'cfg(any(target_os = "ios", target_os = "macos"))'.dependencies]
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
# getpwuid_r for home directory fallback when $HOME is unset.
libc = "0.2.186"

[target.'cfg(target_os = "windows")'.dependencies]
# Win32 FFI: known-folder paths (SHGetKnownFolderPath) + package-identity probe.
windows-sys = { 
    version = "0.61.2", 
    features = [
        "Win32_UI_Shell", # SHGetKnownFolderPath + FOLDERID_* GUID constants
        "Win32_Foundation", # APPMODEL_ERROR_NO_PACKAGE, ERROR_INSUFFICIENT_BUFFER (packaging probe)
        "Win32_System_Com", # CoTaskMemFree (release SHGetKnownFolderPath output)
        "Win32_Globalization", # lstrlenW (null-terminated wide string length)
        "Win32_Storage_Packaging_Appx", # GetCurrentPackageFullName
    ] 
}

# WinRT: package ApplicationData folders (Current + CreateForPackageFamily fallback).
windows = { 
    version = "0.62.2", 
    features = [
        # ApplicationData, StorageFolder, IStorageItem (Path())
        "Storage",
        # Required because StorageFolder implements IStorageFolderQueryOperations,
        # and the crate gates methods returning StorageFolder behind this feature.
        "Storage_Search",
        # ApplicationDataManager::CreateForPackageFamily
        "Management_Core",
        # Package::Current / Id / FamilyName
        "ApplicationModel", 
    ] 
}

[dev-dependencies]
test-case = "3.3.1"

[features]
test-helpers = []
